--- a/views/report_stockpicking.xml
+++ b/views/report_stockpicking.xml
@@ -234,11 +234,9 @@ TODO :
                                             <span t-field="move.product_id.is_ref_client"/> / 
                                             <span t-field="move.product_id.is_ind_plan"/> 
                                             <br />
-                                            <!--
-                                            <t t-if="move.product_id.is_origine_produit_id">
-                                                <i>Origine : <span t-field="move.product_id.is_origine_produit_id.name"/></i><br />
+                                            <t t-if="move.is_lots">
+                                                <div t-field="move.is_lots"/>
                                             </t>
-                                            -->
                                             <t t-if="move.product_id.is_nomenclature_douaniere">
                                                 <i>Nomenclature douanière : <span t-field="move.product_id.is_nomenclature_douaniere"/></i>
                                             </t>
@@ -339,12 +337,13 @@ TODO :
                             </t>
                             <t t-if="o.is_galia_um">
                                 <br />
-                                <table class="table table-condensed" style="width:50%">
+                                <table class="table table-condensed" style="width:60%">
                                     <thead>
                                         <tr>
                                             <th class="text-left">Article</th>
                                             <th class="text-left">Etiquette UM</th>
                                             <th class="text-left">Etiquette UC</th>
+                                            <th class="text-left">Lot</th>
                                             <th class="text-left">Qt pièces</th>
                                         </tr>
                                     </thead>
@@ -358,6 +357,7 @@ TODO :
                                                 <td style="padding:2px;" t-att-rowspan="obj['um_rowspan']"><span t-esc="obj['um']"/></td>
                                             </t>
                                             <td style="padding:2px;"><span t-esc="obj['uc']"/></td>
+                                            <td style="padding:2px;"><span t-esc="obj['lot']"/></td>
                                             <td style="padding:2px;"><span t-esc="obj['qt_pieces']"/></td>
                                         </tr>
                                     </tbody>
