--- a/views/report_is_facture_pk.xml
+++ b/views/report_is_facture_pk.xml
@@ -70,7 +70,8 @@
                 <div class="text-center" style="border-top: 1px solid black">
                     <table style="width:100%">
                         <tr>
-                            <td class="text-left" style="width:80%">
+                            <td class="text-left" style="width:80%;font-size:10pt;">
+                                PLASTI-KA SA - Zone industrielle - 4060 KALAA KEBIRA - C.D : 814756 N/N.R - MF : 875565/X
                             </td>
                             <td class="text-right">
                                 Page <span class="page" style="font-size:7pt;"/> / <span class="topage"/>
@@ -225,7 +226,6 @@
                     <br/>
                     <div class="row" style="page-break-after:always;">
                         <div class="col-xs-12 text-center">
-
                             Règlement : par virement SWIFT sur le compte n° 7300 0080 8592 0340 0046<br/>
                             T.I.B. : Tunis International Banq,Avenue des Etats-Unis- TUNISIE<br/>
                             Code SWIFT : TUIBTNTT
@@ -233,6 +233,13 @@
                     </div>
 
                     <br/>
+
+                    <div class="row" t-if="o.num_import_matiere">
+                        <div class="col-xs-12 text-left">
+                            N° d'import matière première : <b><span t-field="o.num_import_matiere"/></b>
+                        </div>
+                    </div>
+
                     <div class="row">
                         <div class="col-xs-12">
                             <table class="table table-condensed" width="100%">
